# speng-starb

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.sh  rust-toolchain  rustfmt.toml
.cargo/: config.toml
crates/starb/: Cargo.toml
crates/starb-app/: Cargo.toml
crates/starb-app/src/: lib.rs
crates/starb-config/: Cargo.toml
crates/starb-config/src/: lib.rs
crates/starb-derive/: Cargo.toml
crates/starb-derive/src/: lib.rs
crates/starb-handler/: Cargo.toml
crates/starb-handler/src/: lib.rs  sel_object.rs
crates/starb-logging/: Cargo.toml
crates/starb-logging/src/: lib.rs
crates/starb/src/: main.rs
crates/starb/src/exe/: directory.rs  exe.rs  headers.rs  mod.rs
crates/starb/src/patches/: patch.rs
crates/starb/src/patches/data/: accurate_temp_filter.toml
eframe-0.21.3/: .cargo_vcs_info.json  Cargo.toml
eframe-0.21.3/src/native/: run.rs
proxy/: Cargo.toml
proxy/src/: lib.rs
src/: app.rs  exe.rs  handler.rs  main.rs  once.rs  patches.rs  serde.rs  utils.rs
src/exe/: directory.rs  headers.rs
src/exe/directory/: functions.rs  import_table.rs  imports.rs
src/patches/: compact.rs
src/patches/data/: no_search_locking.toml
starb/: Cargo.toml
starb/src/: app.rs  lib.rs  plugin.rs  plugins.rs  utils.rs
starb/src/plugins/: max_systems_found.rs  no_max_search_radius.rs  no_max_systems_found.rs  no_search_locking.rs  non_negative_search_radius.rs
