 [package]
     name = "speng-starb-proxy"
  version = "0.0.0"
  edition = "2021"

 [lib]
  crate-type = ["cdylib"]

 [dependencies]
  once_cell = "1.17.1"
  paste = "1.0.12"

 [dependencies.windows-sys]
  version = "0.48.0"
  features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
  ]
