 [package]
     name = "speng-starb"
  version = "3.1.0"
  edition = "2021"

 [lib]
  crate-type = ["cdylib", "rlib"]

 [dependencies]
  color-eyre = "0.6.2"
  egui = "0.21.0"
  eframe = { version = "0.21.3", features = ["persistence"] }
  eyre = "0.6.8"
  hashbrown = "0.13.2"
  once_cell = "1.17.1"
  parking_lot = "0.12.1"
  paste = "1.0.12"
  path-clean = "1.0.1"
  region = "3.0.0"
  retour = "0.1.0"
  serde = "1.0.163"
  steamworks-sys = "0.10.0"
  tracing = "0.1.37"
  tracing-error = "0.2.0"
  tracing-subscriber = "0.3.17"

 [dependencies.windows-sys]
  version = "0.48.0"
  features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
  ]
