[package]
name = "starb"
version = "3.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.13.0", features = ["min_const_generics"] }
color-eyre = "0.6.2"
eyre = "0.6.8"
once_cell = "1.17.0"
parking_lot = "0.12.1"
target-lexicon = "0.12.6"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
widestring = "1.0.2"
windows = { version = "0.44.0", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }
