[package]
name = "starb"
version = "3.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.13.0", features = ["min_const_generics"] }
color-eyre = "0.6.2"
eyre = "0.6.8"
hashbrown = "0.13.2"
once_cell = "1.17.0"
parking_lot = "0.12.1"
target-lexicon = "0.12.6"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
